--- a/angularapp/index.html
+++ b/angularapp/index.html
@@ -16,11 +16,11 @@
   
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
-</head>
+<link rel="stylesheet" href="styles.1757138a6d6bc4062c1a.css"></head>
 
 <body class="mat-app-background">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.9f83624c7bb370dcef03.js"></script><script type="text/javascript" src="scripts.e0f38736a3d6659612f9.js"></script><script type="text/javascript" src="main.ca91031bf9b8d6e6dc0d.js"></script></body>
 
 </html>
