Enhancement are done

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="assets/cropped-mfk_software_logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/mfkicon.ico"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
